@@ -1,3 +1,8 @@
+2004-11-29  Andras Varga
+
+  	* on Mac OS/X, implement ftime() with gettimeofday() [patch from 
+  	Michael Tuexen]
+
 2004-11-25  Andras Varga
 
 	* several files: displayStringAsParent() renamed to backgroundDisplay-
